[gd_scene load_steps=5 format=3 uid="uid://dlqoc65a1fuu7"]

[ext_resource type="Script" path="res://prog_93a.gd" id="1_22ujx"]
[ext_resource type="Theme" uid="uid://g8y3r3oufsf5" path="res://Big Font.tres" id="1_yd4vt"]

[sub_resource type="Theme" id="Theme_y11t5"]
default_font_size = 45

[sub_resource type="Theme" id="Theme_i3v56"]
default_font_size = 40

[node name="prog93a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_22ujx")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 281.0
offset_top = 13.0
offset_right = 828.0
offset_bottom = 90.0
theme = ExtResource("1_yd4vt")
text = "C O M P S C I  Electric"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 109.0
offset_right = 412.0
offset_bottom = 181.0
theme = ExtResource("1_yd4vt")
text = "Killowatts Used:"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 178.0
offset_right = 1138.0
offset_bottom = 250.0
theme = ExtResource("1_yd4vt")
text = "- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - "

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 249.0
offset_right = 416.0
offset_bottom = 321.0
theme = SubResource("Theme_y11t5")
text = "Base Rate: "

[node name="lblBase" type="Label" parent="."]
layout_mode = 0
offset_left = 752.0
offset_top = 247.0
offset_right = 1153.0
offset_bottom = 319.0
theme = SubResource("Theme_y11t5")
text = "$"

[node name="lblSurcharge" type="Label" parent="."]
layout_mode = 0
offset_left = 752.0
offset_top = 305.0
offset_right = 1153.0
offset_bottom = 377.0
theme = SubResource("Theme_y11t5")
text = "$"

[node name="lblCitytax" type="Label" parent="."]
layout_mode = 0
offset_left = 752.0
offset_top = 364.0
offset_right = 1153.0
offset_bottom = 436.0
theme = SubResource("Theme_y11t5")
text = "$"

[node name="lblTotalPay" type="Label" parent="."]
layout_mode = 0
offset_left = 752.0
offset_top = 442.0
offset_right = 1153.0
offset_bottom = 514.0
theme = SubResource("Theme_y11t5")
text = "$"

[node name="lblLatePay" type="Label" parent="."]
layout_mode = 0
offset_left = 752.0
offset_top = 499.0
offset_right = 1153.0
offset_bottom = 571.0
theme = SubResource("Theme_y11t5")
text = "$"

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 315.0
offset_right = 414.0
offset_bottom = 387.0
theme = SubResource("Theme_y11t5")
text = "Surcharge:"

[node name="Label8" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 377.0
offset_right = 414.0
offset_bottom = 449.0
theme = SubResource("Theme_y11t5")
text = "Citytax:"

[node name="Label9" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 445.0
offset_right = 414.0
offset_bottom = 517.0
theme = SubResource("Theme_y11t5")
text = "Pay This Amount:"

[node name="Label10" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 504.0
offset_right = 414.0
offset_bottom = 576.0
theme = SubResource("Theme_y11t5")
text = "After May 20th Pay:"

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 231.0
offset_top = 570.0
offset_right = 436.0
offset_bottom = 637.0
theme = SubResource("Theme_i3v56")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 476.0
offset_top = 570.0
offset_right = 681.0
offset_bottom = 637.0
theme = SubResource("Theme_i3v56")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 727.0
offset_top = 570.0
offset_right = 932.0
offset_bottom = 637.0
theme = SubResource("Theme_i3v56")
text = "Exit"

[node name="txtKillowatts" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 753.0
offset_top = 106.0
offset_right = 1084.0
offset_bottom = 191.0
theme = ExtResource("1_yd4vt")

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
